--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
+body{
+  background-color: #f5f5f570;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.top-bar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #007bff;
+  height: 200px;
+  width: 100%;
+}
+
+.title{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container-pesquisar{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
+  margin-top: 110px;  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.txt-pesquisar{
+  display: flex;
+  width: 100%;
+  height: 30px;
+  border-radius: 5px;
+  border: solid 1px gray;
+  padding-left: 5px;
 }
+
+.container-resultado-pesquisa{
+  margin-top: 50px;
+  width: 90%;
+
+  max-height: 500px;
+  overflow: auto;
+}
+
+.container-tipo{
+    
+}
+
+.container-input{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 800px;
+}
+
+.container-btn-pesquisar{
+
+}
+
+.txt{
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+thead{
+  background-color: #007bff;
+  color: white;
+}
+
+tr th{
+  text-align: center;
+}
+
+.img-logo{
+  
+  width: 700px;
+}
+
